--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 body {
     width: 100%;
   height: 100%;
-  --color: #E1E1E1;
+  --color: #E1E1E1 !important;
   background-color: #F3F3F3;
   background-image: linear-gradient(0deg, transparent 24%, var(--color) 25%, var(--color) 26%, transparent 27%,transparent 74%, var(--color) 75%, var(--color) 76%, transparent 77%,transparent),
       linear-gradient(90deg, transparent 24%, var(--color) 25%, var(--color) 26%, transparent 27%,transparent 74%, var(--color) 75%, var(--color) 76%, transparent 77%,transparent);
